@@ -357,12 +357,14 @@ L<Mojo::Promise> object resolving to the return value of the called handler.
 
 =head2 timeout
 
-  my $promise = $promise->timeout(5 => 'Timeout!');
-  my $promise = $promise->timeout(5);
+  my $new  = Mojo::Promise->timeout(5 => 'Timeout!');
+  $promise = $promise->timeout(5 => 'Timeout!');
+  $promise = $promise->timeout(5);
 
-Create a new L<Mojo::Promise> that will be rejected after a given amount of
-time in seconds. A default rejection reason will be provided, unless specified
-as input.
+Create a new L<Mojo::Promise> object with a timeout or attach a timeout to an
+existing promise. The promise will be rejected after the given amount of time in
+seconds with a reason, which defaults to C<Promise timeout>. Note that this
+method is EXPERIMENTAL and might change without warning!
 
 =head2 wait
 
