@@ -1,5 +1,6 @@
 
 8.12  2019-01-27
+  - Added EXPERIMENTAL timeout method to Mojo::Promise. (batman)
   - Removed deprecated module Mojolicious::Plugin::PODRenderer.
   - Removed deprecated method mojo_lib_dir from Mojo::Home.
 
